--- a/data_analysis.ipynb
+++ b/data_analysis.ipynb
@@ -6,6 +6,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
+    "from sqlalchemy import create_engine\n",
+    "import pyscopg2\n",
+    "from etl_pass import password"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "csv_file = 'data/WordsByCharacter.csv'\n",
     "word_char_df = pd.read_csv(csv_file)\n",
     "word_char_df.head()"
