Updated repo with new files

--- a/Movies_info.ipynb
+++ b/Movies_info.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
        "4            66.333333  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
        "3                 95.0  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,15 +247,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>RuntimeInMinutes</th>\n",
+       "      <th>BudgetInMillions</th>\n",
+       "      <th>BoxOfficeRevenueInMillions</th>\n",
+       "      <th>AcademyAwardNominations</th>\n",
+       "      <th>AcademyAwardWins</th>\n",
+       "      <th>RottenTomatoesScore</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>The Lord Of The Rings Series</td>\n",
+       "      <td>558</td>\n",
+       "      <td>281</td>\n",
+       "      <td>2917.0</td>\n",
+       "      <td>30</td>\n",
+       "      <td>17</td>\n",
+       "      <td>94.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>The Fellowship Of The Ring</td>\n",
+       "      <td>178</td>\n",
+       "      <td>93</td>\n",
+       "      <td>871.5</td>\n",
+       "      <td>13</td>\n",
+       "      <td>4</td>\n",
+       "      <td>91.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>The Two Towers</td>\n",
+       "      <td>179</td>\n",
+       "      <td>94</td>\n",
+       "      <td>926.0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>96.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>The Return Of The King</td>\n",
+       "      <td>201</td>\n",
+       "      <td>94</td>\n",
+       "      <td>1120.0</td>\n",
+       "      <td>11</td>\n",
+       "      <td>11</td>\n",
+       "      <td>95.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                           Name  RuntimeInMinutes  BudgetInMillions  \\\n",
+       "0  The Lord Of The Rings Series               558               281   \n",
+       "1    The Fellowship Of The Ring               178                93   \n",
+       "2               The Two Towers                179                94   \n",
+       "3        The Return Of The King               201                94   \n",
+       "\n",
+       "   BoxOfficeRevenueInMillions  AcademyAwardNominations  AcademyAwardWins  \\\n",
+       "0                      2917.0                       30                17   \n",
+       "1                       871.5                       13                 4   \n",
+       "2                       926.0                        6                 2   \n",
+       "3                      1120.0                       11                11   \n",
+       "\n",
+       "   RottenTomatoesScore  \n",
+       "0                 94.0  \n",
+       "1                 91.0  \n",
+       "2                 96.0  \n",
+       "3                 95.0  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Movies_filtered_df['Name'] = Movies_filtered_df.Name.str.title()\n",
+    "Movies_filtered_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "engine = create_engine(\"postgresql://postgres:{password}@localhost:5432/EtlProject_db\".format(password=password))\n",
+    "engine = create_engine(\"postgresql://postgres:XXXXXXX@localhost:5432/ETL_ProjectDB\")\n",
     "conn = engine.connect()\n",
     "\n",
-    "Movies_filtered_df.to_sql(name='Movies_filtered_df', con=engine, if_exists='append', index=False)\n"
+    "Movies_filtered_df.to_sql(name='movies', con=engine, if_exists='append', index=False)\n",
+    "\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -274,7 +393,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
